# mbzirc_2020_balloon_popping

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: arena.txt  dynparam.cfg  mpc_tracker.yaml  safe1.txt  safe2.txt  uav.yaml  uav.yaml.orig  uav60.yaml
config/simulation/: simulation.yaml  simulation_2.yaml  simulation_uav1.yaml  simulation_uav2.yaml  simulation_uav61.yaml
config/uav/: f550.yaml  t650.yaml  uav.yaml  uav60.yaml  uav61.yaml  uav62.yaml
include/: BalloonCircleDestroy.h  WaypointFlier.h
launch/: uav.launch
launch/simulation/: simulation.launch  simulation_2.launch  simulation_a.launch
launch/uav/: simulation.launch  t650.launch  uav.launch  uav60.launch  uav62.launch
scripts/: record_balloons.sh
src/: BalloonCircleDestroy.cpp  WaypointFlier.cpp
tmux_scripts/experiments/: error.txt  start.sh  world.yaml  world_ball_arena.yaml
tmux_scripts/experiments/custom_configs/: constraint_manager.yaml  control_manager.yaml  odometry.yaml  uav_manager.yaml
