<?xml version="1.0"?>
<package format="2">

  <name>balloon_circle_destroy</name>
  <version>0.0.1</version>
  <description>balloon_circle_destroy</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>
  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
